{
    "name": "SurvivorsControls",
    "maps": [
        {
            "name": "Player",
            "id": "f4092d2e-d4f7-41e4-a57e-dcda1b502aa8",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a3ae621e-38fb-4cf7-9c63-11a99d20913c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "1af05be9-ab74-4d9e-9854-e48b6f052deb",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "cbb413a7-68cd-4b8d-b4ca-9a733d95c284",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "a9735436-7647-4c47-bbce-46f531552b79",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "a07ceb88-20d6-4d52-b91c-517a72d9e7fd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "6162cadb-cfe7-40e0-8c9f-e4d3cf72b3ba",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Debug",
            "id": "d0d25ff7-c6d8-4075-8999-59f91148f4e7",
            "actions": [
                {
                    "name": "FpsCounterShow",
                    "type": "Button",
                    "id": "8237cedd-7c68-4804-99a8-4c0451cd15df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d9e3d59-94a7-4621-9ef0-50861836fada",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "FpsCounterShow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": []
        }
    ]
}